re PR tree-optimization/43379 (ICE: error: SSA_NAME_OCCURS_IN_ABNORMAL_PHI should be set with -O2 -ftracer)

2010-03-16  Richard Guenther  <rguenther@suse.de>

	PR middle-end/43379
	* tree-cfg.c (gimple_merge_blocks): When propagating virtual
	PHI operands make sure to merge SSA_NAME_OCCURS_IN_ABNORMAL_PHI
	properly.

	* gcc.dg/pr43379.c: New testcase.

From-SVN: r157478